Add project info in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,18 @@
 name = "os-terminal"
 version = "0.1.0"
 edition = "2021"
+authors = ["Xuanjun Wen <wenxuanjun@yahoo.com>"]
+description = "Beautiful terminal emulator on no-std environment"
+keywords = ["terminal", "console", "os", "no-std"]
+categories = ["embedded", "gui", "no-std"]
+license = "MIT"
+homepage = "https://github.com/rcore-os/embedded-term"
+repository = "https://github.com/rcore-os/embedded-term"
 
 [profile.release]
 lto = true
 opt-level = "z"
-# strip = "symbols"
+strip = "symbols"
 codegen-units = 1
 
 [dependencies]
