--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "os-terminal"
-version = "0.3.7"
+version = "0.4.0"
 edition = "2021"
 authors = ["Xuanjun Wen <wenxuanjun@yahoo.com>"]
 description = "Beautiful terminal emulator on no-std environment"
@@ -9,20 +9,25 @@ categories = ["embedded", "gui", "no-std"]
 license = "MIT"
 homepage = "https://github.com/wenxuanjun/os-terminal"
 repository = "https://github.com/wenxuanjun/os-terminal"
-exclude = ["screenshot.png"]
+exclude = ["/examples", "screenshot.png"]
+
+[[example]]
+name = "terminal"
+required-features = ["truetype"]
 
 [profile.release]
 lto = true
-opt-level = "z"
+opt-level = 3
 codegen-units = 1
 
 [dependencies]
 vte = "0.13.0"
 bitflags = "2.6.0"
 spin = "0.9.8"
+pc-keyboard = "0.8.0"
 
 [dependencies.ab_glyph]
-version = "0.2.28"
+version = "0.2.29"
 features = ["libm", "variable-fonts"]
 optional = true
 default-features = false
@@ -40,12 +45,22 @@ optional = true
 default-features = false
 
 [dev-dependencies]
-minifb = "0.27.0"
 crossbeam-channel = "0.5.13"
+keycode = "0.4.0"
 
 [dev-dependencies.nix]
 version = "0.29.0"
 features = ["term", "process", "fs"]
+
+[dev-dependencies.winit]
+version = "0.30.5"
+features = ["rwh_06", "x11", "wayland"]
+default-features = false
+
+[dev-dependencies.softbuffer]
+version = "0.4.6"
+features = ["kms", "x11", "wayland"]
+default-features = false
 
 [features]
 default = ["bitmap"]
