--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "os-terminal"
-version = "0.4.4"
+version = "0.4.5"
 edition = "2021"
 authors = ["Xuanjun Wen <wenxuanjun@yahoo.com>"]
 description = "Beautiful terminal emulator on no-std environment"
@@ -64,6 +64,6 @@ features = ["kms", "x11", "wayland"]
 default-features = false
 
 [features]
-default = ["bitmap"]
+default = ["bitmap", "truetype"]
 bitmap = ["dep:noto-sans-mono-bitmap"]
 truetype = ["dep:ab_glyph"]
