--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "os-terminal"
-version = "0.4.8"
+version = "0.5.0"
 edition = "2021"
 authors = ["Xuanjun Wen <wenxuanjun@yahoo.com>"]
 description = "Beautiful terminal emulator on no-std environment"
@@ -21,11 +21,14 @@ opt-level = 3
 codegen-units = 1
 
 [dependencies]
-vte = "0.13.0"
 bitflags = "2.6.0"
 spin = "0.9.8"
 pc-keyboard = "0.8.0"
 unicode-width = "0.2.0"
+
+[dependencies.vte]
+version = "0.13.0"
+features = ["ansi"]
 
 [dependencies.ab_glyph]
 version = "0.2.29"
