--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "os-terminal"
-version = "0.6.2"
-edition = "2021"
+version = "0.6.3"
+edition = "2024"
 authors = ["Xuanjun Wen <wenxuanjun@yahoo.com>"]
 description = "Beautiful terminal emulator on no-std environment"
 keywords = ["terminal", "console", "os", "no-std"]
@@ -18,6 +18,8 @@ required-features = ["truetype"]
 [profile.release]
 lto = true
 opt-level = 3
+panic = "abort"
+codegen-units = 1
 
 [dependencies]
 bitflags = "2.8.0"
@@ -54,7 +56,6 @@ optional = true
 default-features = false
 
 [dev-dependencies]
-crossbeam-channel = "0.5.14"
 keycode = "0.4.0"
 
 [dev-dependencies.nix]
@@ -72,6 +73,6 @@ features = ["kms", "x11", "wayland"]
 default-features = false
 
 [features]
-default = ["bitmap", "truetype"]
+default = ["bitmap"]
 bitmap = ["dep:noto-sans-mono-bitmap"]
 truetype = ["dep:ab_glyph"]
