--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "os-terminal"
-version = "0.6.5"
+version = "0.6.6"
 edition = "2024"
 authors = ["Xuanjun Wen <wenxuanjun@yahoo.com>"]
 description = "Beautiful terminal emulator on no-std environment"
@@ -22,7 +22,7 @@ panic = "abort"
 codegen-units = 1
 
 [dependencies]
-bitflags = "2.8.0"
+bitflags = "2.9.0"
 spin = "0.9.8"
 pc-keyboard = "0.8.0"
 unicode-width = "0.2.0"
@@ -30,6 +30,11 @@ unicode-width = "0.2.0"
 [dependencies.vte]
 version = "0.15.0"
 features = ["ansi"]
+default-features = false
+
+[dependencies.base64]
+version = "0.22.1"
+features = ["alloc"]
 default-features = false
 
 [dependencies.derive_more]
@@ -57,6 +62,11 @@ default-features = false
 
 [dev-dependencies]
 keycode = "0.4.0"
+
+[dev-dependencies.arboard]
+version = "3.4.1"
+features = ["wayland-data-control"]
+default-features = false
 
 [dev-dependencies.nix]
 version = "0.29.0"
