--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "os-terminal"
 version = "0.6.7"
-edition = "2024"
+edition = "2021"
 authors = ["Xuanjun Wen <wenxuanjun@yahoo.com>"]
 description = "Beautiful terminal emulator on no-std environment"
 keywords = ["terminal", "console", "os", "no-std"]
@@ -10,6 +10,7 @@ license = "MIT"
 homepage = "https://github.com/wenxuanjun/os-terminal"
 repository = "https://github.com/wenxuanjun/os-terminal"
 exclude = ["/examples", "screenshot.png"]
+rust-version = "1.81.0"
 
 [[example]]
 name = "terminal"
@@ -23,7 +24,7 @@ codegen-units = 1
 
 [dependencies]
 bitflags = "2.9.0"
-spin = "0.9.8"
+spin = "0.10.0"
 pc-keyboard = "0.8.0"
 unicode-width = "0.2.0"
 
@@ -33,7 +34,7 @@ features = ["ansi"]
 default-features = false
 
 [dependencies.base64ct]
-version = "1.7.1"
+version = "1.7.3"
 features = ["alloc"]
 
 [dependencies.derive_more]
@@ -60,10 +61,10 @@ optional = true
 default-features = false
 
 [dev-dependencies]
-keycode = "0.4.0"
+keycode = "1.0.0"
 
 [dev-dependencies.arboard]
-version = "3.4.1"
+version = "3.5.0"
 features = ["wayland-data-control"]
 default-features = false
 
