--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,11 +42,6 @@ default-features = false
 version = "1.7.3"
 features = ["alloc"]
 
-[dependencies.derive_more]
-version = "2.0.1"
-features = ["full"]
-default-features = false
-
 [dependencies.ab_glyph]
 version = "0.2.29"
 features = ["libm", "variable-fonts"]
@@ -74,15 +69,15 @@ features = ["wayland-data-control"]
 default-features = false
 
 [dev-dependencies.nix]
-version = "0.29.0"
+version = "0.30.0"
 features = ["term", "process", "fs"]
 
 [dev-dependencies.winit]
-version = "0.30.9"
+version = "0.30.10"
 features = ["rwh_06", "x11", "wayland"]
 default-features = false
 
 [dev-dependencies.softbuffer]
 version = "0.4.6"
-features = ["kms", "x11", "wayland"]
+features = ["x11", "wayland"]
 default-features = false
